[package]
name = "helix-wowtracker-domain"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"


[lib]
name="helix_wowtracker_domain"

[dependencies]
## Error management
thiserror = "1.0"

##SERIALIZATION TO JSON
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "*"

##DATA UTILS => UTC Date, UUID generation
uuid = { version = "0.8", features = ["v5", "serde"]}
chrono = { version = "^0.4", features = ["serde"] }

##async
async-trait = "0.1.41"
tokio = { version = "0.3.3", features = ["full"] }

##Blizzard API
blizzard-api-rs = {git = "https://github.com/slackmagic/blizzard-api-rs", branch = "master"}

##Tracker
helix-tracker-lib = {git = "https://github.com/slackmagic/helix-shared-lib", branch = "master"}
