[package]
name = "blizzard-api-storage"
version = "0.1.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="blizzard_api_storage"


[dependencies]
helix-wowtracker-domain = { path = "../../helix-wowtracker-domain" }
blizzard-api-rs = {git = "https://github.com/slackmagic/blizzard-api-rs", branch = "master"}

##async
async-trait = "0.1.41"
tokio = { version = "0.2.22", features = ["full"] }

##UUID
uuid = { version = "0.8", features = ["v5", "serde"]}